--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   </header>
   <main>
     <ul id="book-list">
-      <li>Book 1: Learn JavaScript</li>
+      <li>Book 1: GITHUB ACTIONS</li>
       <li>Book 2: Mastering Node.js</li>
       <li>Book 3: Express Essentials</li>
     </ul>
